@@ -6,8 +6,12 @@ use Wx::build::Utils qw(write_string);
 
 use Config;
 
-die "Please set MACOSX_DEPLOYMENT_TARGET to 10.3 or above"
-    if $ENV{MACOSX_DEPLOYMENT_TARGET} && $ENV{MACOSX_DEPLOYMENT_TARGET} < 10.3;
+if ($ENV{MACOSX_DEPLOYMENT_TARGET}) {
+  my ($dt0, $dt1, @discard) = split(/[^0-9]+/,$ENV{MACOSX_DEPLOYMENT_TARGET} );
+  if (($dt0 <= 10) && ( $dt1 < 3 )) {
+	die "Please set MACOSX_DEPLOYMENT_TARGET to 10.3 or above";
+  }
+}
 
 my $tools43 = '/Applications/Xcode.app/Contents/Developer/Tools';
 my $restoolpath = ( -d $tools43 ) ? $tools43 : '/Developer/Tools';
