@@ -54,7 +54,6 @@
 #define wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_DOWN    wxEVT_AUINOTEBOOK_TAB_RIGHT_DOWN
 #define wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_UP      wxEVT_AUINOTEBOOK_TAB_RIGHT_UP
 #define wxEVT_COMMAND_AUINOTEBOOK_BG_DCLICK         wxEVT_AUINOTEBOOK_BG_DCLICK
-#define wxEVT_COMMAND_AUINOTEBOOK_CANCEL_DRAG       wxEVT_AUINOTEBOOK_CANCEL_DRAG
 #endif
 
 static wxPliEventDescription evts[] =
@@ -82,9 +81,6 @@ static wxPliEventDescription evts[] =
     EVT( EVT_AUINOTEBOOK_TAB_RIGHT_DOWN, 3, wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_DOWN )
     EVT( EVT_AUINOTEBOOK_TAB_RIGHT_UP, 3, wxEVT_COMMAND_AUINOTEBOOK_TAB_RIGHT_UP )
     EVT( EVT_AUINOTEBOOK_BG_DCLICK, 3, wxEVT_COMMAND_AUINOTEBOOK_BG_DCLICK )
-#if WXPERL_W_VERSION_GE( 2, 9, 5 )
-    EVT( EVT_AUINOTEBOOK_CANCEL_DRAG, 3, wxEVT_COMMAND_AUINOTEBOOK_CANCEL_DRAG )
-#endif
     { 0, 0, 0 }
 };
 
